--- a/Example/YalgaarExample.html
+++ b/Example/YalgaarExample.html
@@ -4,8 +4,8 @@
 <head>
     <title></title>
     <link href="Site.css" rel="stylesheet" />
-    <script src="Scripts/jquery-1.10.2.js"></script>
-    <script src="Scripts/yalgaar-v1.0.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.js"></script>
+    <script src="../lib/Web/yalgaar-v1.0.0.js"></script>
 	<style>
         body{
             background:#ccc;
@@ -96,42 +96,6 @@
     </script>
 </head>
 <body>
-<!-- <h1 style="text-align:center">Yalgaar Javascript SDK Example</h1>
-    <table style="border:none;" align="center">
-        <tr>
-            <td style="vertical-align:top;">
-                <div class="row">
-                    <label>Client Key:</label>
-                    <input type="text" id="txtClientKey" value="" /><br /><br />
-					<label>UUID:</label>
-                    <input type="text" id="txtUUID" value="YalgaarJSUUID" /><br /><br />
-                    <input type="button" id="btnConnect" name="btnConnect" value="Connect" onclick="ConnectYalgaar()" />
-					<input type="button" id="btnDisConnect" name="btnDisConnect" value="Disconnect" onclick="DisConnectYalgaar()" />
-                    <br /><br />
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <label>Subscribe Channel:</label>
-                        <input type="text" id="txtSubChannelName" name="txtSubChannelName" value="YourChannel" /><br /><br />
-                        <input type="button" value="SubScribe" id="btnSubScribe" onclick="SubMessage()" />&nbsp;&nbsp;&nbsp;
-                        <input type="button" value="UnSubscribe" id="btnUnSubscribe" onclick="UnSubMessage()" /><br /><br />
-                        <label>Message:</label>
-                        <input type="text" id="txtmessage" name="txtmessage" value="Yalgaar Message" />&nbsp;&nbsp;&nbsp;
-                        <input type="button" id="btnSendMsg" value="Publish" onclick="PubMessage()" />
-                        <br /><br />
-                    </div>
-                </div>
-            </td>
-            <td>
-                <div class="row">
-                    <textarea id="txtDisplayMsg" rows="20" cols="80" style="width:700px"></textarea>
-                    <br />
-                    <br />
-                    <input type="button" id="btnClear" value="Clear" onclick="ClearMessage()" />
-                </div>
-            </td>
-        </tr>
-    </table> -->
 <div id="wrapper">
         <h2>Yalgaar Javascript SDK Example</h2>
         <table>
